# mcp_cursor_fork

./: README.md  TASKS.md  cursor_mcp_config_example.json  minimal_server.py  pyproject.toml  test_client.py
.cursor/: mcp.json
mcp_venv/: pyvenv.cfg
src/filesystem_server/: __init__.py  server.py
tests/: test_server.py
