[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filesystem-mcp-server"
version = "0.1.0"
description = "An MCP server for interacting with the local filesystem"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your-email@example.com"},
]
dependencies = [
    "mcp>=0.1.0",
]

[project.scripts]
filesystem-mcp = "src.filesystem_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 